--- a/bruh.html
+++ b/bruh.html
@@ -6,6 +6,10 @@
 	</style>
 	</head>
 	<body onload="mainLoop()" onmousemove="mouseMoveInterrupt()" onkeydown="keyDownInterrupt()" onmousedown="mouseDownInterrupt()">
+		<script src="v2.js" type="text/javascript"></script>
+		<script src="aabb.js" type="text/javascript"></script>
+		<script src="circle.js" type="text/javascript"></script>
+		<script src="spacepartition.js" type="text/javascript"></script>
 		<script>
 // -10 wtf			
 // -2 bruh
@@ -56,7 +60,6 @@
 // - Coincidence
 // - Benign Violations
 //     it's bad but harmless. Tragedy + Time
-
 
 // Timing: Timing is crucial in comedy. The delivery of a joke, including pauses and pacing, can significantly impact its comedic effect. Well-timed punchlines tend to be funnier.
 // Relatability: Jokes that touch on shared experiences or common situations are often funnier because people can relate to them. Understanding the context allows individuals to connect with the humor.
@@ -110,278 +113,6 @@ function mainLoop() {
 	setTimeout(mainLoop, APP.frameDelay);
 }
 
-class V2 {
-	constructor(x = 0, y = undefined) {
-		if (x === 0 && y === undefined) {
-			this.x = 0; this.y = 0;
-		} else if (y === undefined && typeof x === "object") {
-			this.x = x.x; this.y = x.y;
-		} else {
-			this.x = x; this.y = y;
-		}
-		this.assert();
-	}
-	isZero() { return this.x === 0 && this.y === 0; }
-	assert() { if (this.x === undefined || this.y === undefined) { throw new Error("undefined values! " + this.toString()); } }
-	set(x,y) { this.x = x; this.y = y; this.assert(); return this; }
-	copy(v) { this.x = v.x; this.y = v.y; this.assert(); return this; }
-	add(v) { this.x += v.x; this.y += v.y; this.assert(); return this; }
-	sub(v) { this.x -= v.x; this.y -= v.y; this.assert(); return this; }
-	mul(v) {
-		       if (typeof v === "object") {
-			this.x *= v.x; this.y *= v.y;
-		} else if (typeof v === "number") {
-			this.x *= v; this.y *= v;
-		}
-		this.assert();
-		return this;
-	}
-	div(v) {
-		       if (typeof v === "object") {
-			this.x /= v.x; this.y /= v.y;
-		} else if (typeof v === "number") {
-			this.x /= v; this.y /= v;
-		}
-		this.assert();
-		return this;
-	}
-	magnitudeSq() { return this.x * this.x + this.y * this.y; }
-	magnitude() { return Math.sqrt(this.magnitudeSq()); }
-	normalized() { let mag = this.magnitude(); return new V2(this.x / mag, this.y / mag); }
-	area() { return this.x*this.y; }
-	static sum(a, b) { return new V2(a.x + b.x, a.y + b.y); }
-	static diff(a, b) { return new V2(a.x - b.x, a.y - b.y); }
-	static dot(a, b) { return a.x * b.x + a.y * b.y; }
-	static sign(a, b) { return a.x * b.y - a.y * b.x; }
-	static isNan(v) { return !v.x || !v.y; }
-	static prod(a, b) {
-		       if (typeof a === "object" && typeof b === "object") {
-			return new V2(a.x * b.x, a.y * b.y);
-		} else if (typeof a === "object" && typeof b === "number") {
-			return new V2(a.x * b, a.y * b);
-		} else if (typeof b === "object" && typeof a === "number") {
-			return new V2(b.x * a, b.y * a);
-		}
-		throw "can't multiply "+(typeof a)+" and "+(typeof b);
-	}
-	static quotient(a, b) {
-		       if (typeof a === "object" && typeof b === "object") {
-			return new V2(a.x / b.x, a.y / b.y);
-		} else if (typeof a === "object" && typeof b === "number") {
-			return new V2(a.x / b, a.y / b);
-		}
-		return this;
-	}
-	static lerp(a, b, p) {
-		let dx = b.x - a.x;
-		let dy = b.y - a.y;
-		return new V2(a.x + (dx * p), a.y + (dy * p));
-	}
-	static distance(a, b) {
-		let x = a.x-b.x;
-		let y = a.y-b.y;
-		return Math.sqrt(x*x+y*y);
-	}
-}
-
-V2.prototype.toString = function() {
-	return "("+this.x+","+this.y+")";
-};
-
-class AABB {
-	constructor(min, max) { this.min = min; this.max = max; }
-	static isInside(v, min, max) { return v.x < max.x && v.y < max.y && v.x >= min.x && v.y >= min.y; }
-	size() { return new V2(this.max.x-this.min.x, this.max.y-this.min.y); }
-	area() { return this.size().area(); }
-	contains(v) { return AABB.isInside(v, this.min, this.max); }
-	getCenter() { return new V2((this.min.x+this.max.x)/2, (this.min.y+this.max.y)/2); }
-	intersectsCircle(center, radius) {
-		if (this.contains(center)) { return true; }
-		let radSize = new V2(radius,radius);
-		let expandedMin = V2.diff(this.min, radSize);
-		let expandedMax = V2.sum(this.max, radSize);
-		if (AABB.isInside(center, expandedMin, expandedMax)) {
-			let cornerCase = undefined;
-			if (center.x < this.min.x) {
-				if (center.y < this.min.y) {
-					cornerCase = this.min;
-				} else if (center.y > this.max.y) {
-					cornerCase = new V2(this.min.x, this.max.y);
-				}
-			} else if (center.x > this.max.x) {
-				if (center.y < this.min.y) {
-					cornerCase = new V2(this.max.x, this.min.y);
-				} else if (center.y > this.max.y) {
-					cornerCase = this.max;
-				}
-			}
-			if (cornerCase) {
-				let distance = V2.distance(cornerCase, center);
-				return distance <= radius;
-			}
-			return true;
-		}
-		return false;
-	}
-	intersectsRect(otherMin, otherMax) {
-		if (this.min.x > otherMax.x || otherMin.x > this.max.x || this.max.y > otherMin.y || otherMax.y > this.min.y) {
-			return false;
-		}
-		if (this.min.x == this.max.x || this.min.y == this.max.y || otherMax.x == otherMin.x || otherMin.y == otherMax.y) {
-			return false;
-		}
-		return true;
-	}
-	draw(ctx) {
-		let size = this.size();
-		ctx.beginPath();
-		ctx.rect(this.min.x, this.min.y, size.x, size.y);
-		ctx.stroke();
-	}
-}
-
-AABB.prototype.toString = function() {
-	return "(" + this.min.x + "," + this.min.y + ":" + this.max.x + "," + this.max.y + ")";
-};
-
-class Circle {
-	constructor(center, radius) {
-		this.center = center;
-		this.radius = radius;
-	}
-}
-
-Circle.prototype.toString = function() {
-	return "(" + this.center.x.toFixed(2) + "," + this.center.y.toFixed(2) + ":" + this.radius.toFixed(2) + ")";
-};
-
-class SpacePartition {
-	constructor(min, max, minArea, columnsRows, parent = undefined) {
-		this.aabb = new AABB(new V2(min), new V2(max));
-		this.list = [];
-		this.columnsRows = columnsRows;
-		this.depth = 0;
-		this.parent = parent;
-		while(parent) {
-			++this.depth;
-			parent = parent.parent;
-		}
-		if (this.depth > 3) {
-			return;
-		}
-		this.createSubPartition(minArea);
-	}
-
-	createSubPartition(minArea) {
-		let columns = this.columnsRows.x;
-		let rows = this.columnsRows.y;
-		let size = this.aabb.size();
-		let cellSize = new V2(size.x / columns, size.y / rows)
-		let cellArea = cellSize.area();
-		if (cellArea < minArea) {
-			return;
-		}
-		this.subpartition = [];
-		let cursor = new V2(this.aabb.min);
-		for(let r = 0; r < rows; ++r) {
-			cursor.x = this.aabb.min.x;
-			for(let c = 0; c < columns; ++c) {
-				let nextCell = new SpacePartition(cursor, V2.sum(cursor, cellSize), minArea, this.columnsRows, this);
-				this.subpartition.push(nextCell);
-				cursor.x += cellSize.x;
-			}
-			cursor.y += cellSize.y;
-		}
-	}
-
-	draw(ctx, drawElementFunction) {
-		this.aabb.draw(ctx);
-		if (this.subpartition) {
-			for(let i = 0; i < this.subpartition.length; i++) {
-				this.subpartition[i].draw(ctx, drawElementFunction);
-			}
-		}
-		let center = this.aabb.getCenter();
-		//ctx.fillText(""+this.list.length, center.x, center.y);
-		if (drawElementFunction){
-			for (let i = 0; i < this.list.length; ++i) {
-				let element = this.list[i];
-				drawElementFunction(ctx, this, element);
-			}
-		}
-	}
-
-	getPartitions(circle) {
-		if (!this.subpartition) {
-			return [this];
-		}
-		let totalFoundPartitions = undefined;
-		for(let i = 0; i < this.subpartition.length; i++) {
-			let subPartition = this.subpartition[i];
-			if (circle.radius) {
-				if (!subPartition.aabb.intersectsCircle(circle.center, circle.radius)) { continue; }
-			} else {
-				if (!subPartition.aabb.contains(circle.center)) { continue; }
-			}
-			let foundPartitions = subPartition.getPartitions(circle);
-			if (foundPartitions) {
-				if (!totalFoundPartitions) { totalFoundPartitions = []; }
-				totalFoundPartitions = totalFoundPartitions.concat(foundPartitions);
-			}
-		}
-		if (totalFoundPartitions === undefined) {
-			totalFoundPartitions = [this];
-		}
-		return totalFoundPartitions;
-	}
-
-	clearList() {
-		this.list = [];
-		if (this.subpartition) {
-			for(let i = 0; i < this.subpartition.length; i++) {
-				this.subpartition[i].clearList();
-			}
-		}
-	}
-
-	populate(list, convertElementToCircleMethod) {
-		this.clearList();
-		for (let i = 0; i < list.length; ++i) {
-			let element = list[i];
-			let circle = convertElementToCircleMethod(element);
-			let partitions = this.getPartitions(circle);
-			//console.log(element.name+" in "+partitions.length+" partitions: "+partitions[0].aabb);
-			for (let p = 0; p < partitions.length; ++p) {
-				let partition = partitions[p];
-				partition.list.push(element);
-			}
-		}
-	}
-
-	getCollisions(circle, convertElementToCircleMethod) {
-		let partitions = this.getPartitions(circle);
-		//console.log(partitions.length);
-		let collisions = undefined;
-		for (let i = 0; i < partitions.length; ++i) {
-			//console.log(partitions[i].list.length);
-			for (let e = 0; e < partitions[i].list.length; ++e) {
-				let element = partitions[i].list[e];
-				if (!element) { continue; }
-				let otherCircle = convertElementToCircleMethod(element);
-				let targetDistance = otherCircle.radius;
-				if (circle.radius) {
-					targetDistance += circle.radius;
-				}
-				let distance = V2.distance(circle.center, otherCircle.center);
-				if (distance <= targetDistance) {
-					if (!collisions) { collisions = []; }
-					collisions.push(element);
-				}
-			}
-		}
-		return collisions;
-	}
-}
 
 let spacePartition = new SpacePartition(new V2(0,0), new V2(WORLD_WIDTH, WORLD_HEIGHT), WORLD_WIDTH*WORLD_HEIGHT/64, new V2(2,2));
 
